--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/account.png" />
+    <link rel="icon" type="image/x-icon" href="./public/account.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://api.fontshare.com/v2/css?f[]=general-sans@500,600,400,700&display=swap" >
     <meta name="keywords"
@@ -10,6 +10,17 @@
     <meta name="author" content="Shashank Badger">
     <meta name="description" property="og:description"
           content="I am a student, web developer  and Web Application Penetration Tester ">
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/utill.css">
+    <link rel="stylesheet" href="./style/modern_normliz.css">
+    <link rel="stylesheet" href="./style/components/about.css">
+    <link rel="stylesheet" href="./style/components/contact.css">
+    <link rel="stylesheet" href="./style/components/education.css">
+    <link rel="stylesheet" href="./style/components/footer.css">
+    <link rel="stylesheet" href="./style/components/header.css">
+    <link rel="stylesheet" href="./style/components/hero.css">
+    <link rel="stylesheet" href="./style/components/mobile-nav.css">
+    <link rel="stylesheet" href="./style/components/skill.css">
     <meta name="title" property="og:title" content="Shashank Badger">
     <title>Shashank Badger</title>
   </head>
@@ -55,7 +66,7 @@
   </div>
   <main>
     <section class="hero container">
-      <img  class="hero__img" src="/Profile_img.jpg" alt="Profile Photo" />
+      <img  class="hero__img" src="./public/Profile_img.jpg" alt="Profile Photo" />
       <h2 class="hero__subtitle">Hi, I'm Shashank 👋</h2>
       <h1 class="hero__title">Student <br>  Aspiring Developer</h1>
       <p class="hero__discription">I am a passionate and dedicated student with a keen interest in <strong>technology and software development</strong>. My enthusiasm for coding and problem-solving has led me to explore various programming languages, including <strong>HTML, CSS, JavaScript, Python and Java</strong>.</p>
@@ -84,7 +95,7 @@
         </div>
       </div>
       <div class="about__img-wrapper">
-      <img class="about__img lazy loading" src="https://fakeimg.pl/459" data-src="/shashank.jpg" alt="Profile_pic">
+      <img class="about__img lazy loading" src="https://fakeimg.pl/459" data-src="./public/shashank.jpg" alt="Profile_pic">
       </div>
     </section>
     <section id="education" class="education container section">
@@ -198,7 +209,10 @@ style="fill:#228BE6;">
   <footer class="footer container section">
     <h3 class="footer__title">~ Shashank Badger ~</h3>
   </footer>
-	  <script type="module" src="/src/main.js"></script>
-	  <noscript>                                                                                  <iframe src="https://www.googletagmanager.com/ns.html?id="                                      height="0" width="0" style="display:none;visibility:hidden">                    </iframe>                                                                           </noscript>
+	  <script src="./src/main.js"></script>
+	  <noscript>                                                                                  
+      <iframe src="https://www.googletagmanager.com/ns.html?id=" height="0" width="0" style="display:none;visibility:hidden">
+      </iframe>
+    </noscript>
   </body>
 </html>
